# starlette-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .flake8  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
{{cookiecutter.project_slug}}/app/: __init__.py
{{cookiecutter.project_slug}}/app/settings/: main.py
{{cookiecutter.project_slug}}/app/webapp/: main.py  routes.py
{{cookiecutter.project_slug}}/app/webapp/endpoints/: __init__.py  home.py  index.py  websocket.py
{{cookiecutter.project_slug}}/chassis/: exceptions.py  models.py  repository.py
{{cookiecutter.project_slug}}/chassis/types/: json.py
{{cookiecutter.project_slug}}/chassis/websockets/: message.py
{{cookiecutter.project_slug}}/domains/users/models/: user.py
{{cookiecutter.project_slug}}/domains/users/repositories/: user.py
{{cookiecutter.project_slug}}/infra/: db.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 3b07ce6bb409_add_user.py
{{cookiecutter.project_slug}}/scripts/: init-server.sh
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/chassis/types/: test_json.py
{{cookiecutter.project_slug}}/tests/domain/users/repositories/: test_user.py
{{cookiecutter.project_slug}}/tests/infra/: test_db.py
