[tool.poetry]
# name = "{{ cookiecutter.project_name }}"
name = "Hope"
version = "0.1.0"
description = ""
# authors = ["{{ cookiecutter.author_name }} <{{cookiecutter.author_email}}>"]
authors = ["Romulo <cookiecutter.author_email>"]

[tool.mypy]
plugins = "sqlmypy"
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = ["chassis",]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.15.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
python-decouple = "^3.4"
asyncpg = "^0.23.0"
sqlalchemy = "^1.4.20"
sqlalchemy-utils = "^0.37.8"
requests = "^2.26.0"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.910"
flake8-bugbear = "^21.4.3"
isort = "^5.9.2"
pytest-asyncio = "^0.15.1"
ipdb = "^0.13.9"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
